objects/IndividualGDPRState__dlm.object
<CustomObject>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <label>Created By</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasOptedOutProcessing__c</fullName>
        <label>Do Not Process</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndividualId__c</fullName>
        <label>Individual Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedBy__c</fullName>
        <label>Last Modified By</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OptOutProcessRequestCompletionDate__c</fullName>
        <label>Opt Out Process Request Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OptOutProcessRequestDate__c</fullName>
        <label>Opt Out Process Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SendIndividualDataRequestCompletionDate__c</fullName>
        <label>SendIndividualDataRequestCompletionDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SendIndividualDataRequestDate__c</fullName>
        <label>Send Individual Data Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SendIndividualData__c</fullName>
        <label>Export Individual&apos;s Data</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShouldForgetRequestCompletionDate__c</fullName>
        <label>Should Forget Request Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ShouldForgetRequestDate__c</fullName>
        <label>Should Forget Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ShouldForget__c</fullName>
        <label>Forget This Individual</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TenantId__c</fullName>
        <label>Tenant Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>